--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body {
   padding-top: 4rem;
   color: #333;
   --type-first: Helvetica, Arial, sans-serif;
-  --type-second: 'Spectral', Georgia;
+  --type-second: 'Spectral', georgia;
   font-family: var(--type-first);
 }
 
@@ -40,6 +40,42 @@ input {
   padding: 0 1rem;
   margin: 0 auto;
 }
+.mainContainer {
+  margin-top: 4rem;
+}
 a {
   text-decoration: none;
+  color: #333;
+}
+.title {
+  font-family: var(--type-second);
+  line-height: 1;
+  font-size: 3rem;
+  margin: 1rem 0;
+  position: relative;
+  z-index: 1;
+}
+.title::after {
+  content: '';
+  display: block;
+  width: 1.5rem;
+  height: 1.5rem;
+  background: #fb1;
+  position: absolute;
+  bottom: 5px;
+  left: -5px;
+  border-radius: 0.2rem;
+  z-index: -1;
+}
+.animeLeft {
+  opacity: 0;
+  transform: translateX(-20px);
+  animation: animeLeft 0.3s forwards;
+}
+
+@keyframes animeLeft {
+  to {
+    opacity: 1;
+    transform: initial;
+  }
 }
