--- a/src/Components/Login/Login.module.css
+++ b/src/Components/Login/Login.module.css
@@ -1,7 +1,7 @@
 .login {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  min-width: 100vh;
+  min-height: 100vh;
   gap: 2rem;
 }
 
@@ -25,7 +25,7 @@
   .login::before {
     display: none;
   }
-  .form {
+  .forms {
     max-width: 100%;
   }
 }
