--- a/src/Components/Photo/PhotoContent.module.css
+++ b/src/Components/Photo/PhotoContent.module.css
@@ -12,6 +12,14 @@
   animation: scaleUp 0.3s forwards;
 }
 
+.single.photo {
+  grid-template-columns: 1fr;
+  height: auto;
+
+  max-width: 50rem;
+  padding: 0 1rem;
+}
+
 @keyframes scaleUp {
   to {
     opacity: initial;
@@ -22,13 +30,18 @@
 .details {
   padding: 2rem 2rem 0 2rem;
 }
-
+.single .details {
+  padding: 1rem 0px 0px 0px;
+}
 .img {
   grid-row: 1/4;
 }
 
-.comments {
-  padding: 0 2rem;
+.single .img {
+  grid-row: 1;
+  border-radius: 0.4rem;
+  overflow: hidden;
+  margin-top: 0.5rem;
 }
 
 @media (max-width: 64rem) {
