--- a/src/Components/Feed/FeedPhotosItem.module.css
+++ b/src/Components/Feed/FeedPhotosItem.module.css
@@ -11,18 +11,19 @@
 }
 
 .photo {
+  display: grid;
   border-radius: 0.2rem;
   overflow: hidden;
   cursor: pointer;
 }
 
-.photo img {
+.photo > div {
   grid-area: 1/1;
 }
 
-.photo .visualizacao {
+.visualizacao {
   grid-area: 1/1;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.6);
   color: white;
   font-size: 1rem;
   text-align: center;
